--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -79,6 +79,18 @@ body {
     font-weight: bold;
 
 }
+#botao{ text-align: center }
+.botaoEnviar{
+    width: 350px;
+    text-align: center;
+    padding: 15px 20px;
+    border: 1px solid #AAAAAA;
+    border-radius: 22px;
+    color: black;
+    background-color: #D9D9D9;
+    font-size: 18px;
+
+}
 
 @media screen and (max-width: 1060px) {
 
