--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,13 @@
-@font-face { font-family: NovaFlat; src: url('fonts/NovaFlat-Regular.ttf'); } 
-label{
-    font-family: NovaFlat, arial, serif;;
+@font-face {
+    font-family: NovaFlat;
+    src: url('fonts/NovaFlat-Regular.ttf');
 }
+
+label {
+    font-family: NovaFlat, arial, serif;
+    ;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -42,7 +48,7 @@ body {
 .drag-title {
     font-size: 32px;
     font-weight: bold;
-
+    color: white;
 }
 
 .container-drag {
@@ -59,9 +65,10 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    margin-top: 280px
+    margin-top: 8%;
 }
-.drag-text{
+
+.drag-text {
     background-image: url("../Assets/Icons/dragAndDropBackground.svg");
     background-size: 200px 180px;
     background-repeat: no-repeat;
@@ -73,23 +80,52 @@ body {
     align-items: center;
     align-content: center;
 }
-.drag-text label{
+
+.drag-text label {
     font-size: 24px;
     text-align: center;
     font-weight: bold;
 
 }
-#botao{ text-align: center }
-.botaoEnviar{
-    width: 350px;
-    text-align: center;
-    padding: 15px 20px;
-    border: 1px solid #AAAAAA;
-    border-radius: 22px;
-    color: black;
-    background-color: #D9D9D9;
-    font-size: 18px;
 
+#botao {
+    text-align: center
+}
+
+.botaoEnviar {
+    width: 20%;
+}
+
+.modal {
+    text-align: center;
+    padding: 0 !important;
+}
+
+.modal:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -4px;
+}
+
+.modal-dialog {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+}
+
+.modal-body {
+    font-size: 24px;
+    background-color: transparent;
+    background-image: initial;
+    background-repeat: initial;
+    background-attachment: initial;
+    background-position: initial;
+}
+
+#modal-alert {
+    font-size: 24px;
 }
 
 @media screen and (max-width: 1060px) {
@@ -100,8 +136,7 @@ body {
 
     .container-section {
         flex-direction: column;
-        gap:24px;
-        margin-top: 120px
+        gap: 24px;
     }
 
     .drag-section-external {
