--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -63,9 +63,10 @@ body {
 }
 .drag-text{
     background-image: url("../Assets/Icons/dragAndDropBackground.svg");
-    background-size: 200px 180px;
+    background-size: 180px 180px;
     background-repeat: no-repeat;
     background-position-x: center;
+    margin-bottom: 45px;
     width: 100%;
     height: 180px;
     display: flex;
@@ -89,6 +90,17 @@ body {
     color: black;
     background-color: #D9D9D9;
     font-size: 18px;
+
+}
+.botaoUploade{
+    width: 300px;
+    text-align: center;
+    padding: 13px 10px;
+    border: 1px solid #AAAAAA;
+    border-radius: 22px;
+    color: white;
+    background-color: #5A261E;
+    font-size: 14px;
 
 }
 
