--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -13,6 +13,9 @@ body {
     height: 100vh;
 }
 
+.navbar {
+    background-color: #712F26;
+}
 .drag-section-external {
     background-color: #D9D9D9;
     width: 500px;
@@ -151,7 +154,13 @@ body {
     flex-direction: row;
     align-items: flex-end;
 }
-
+h5, h6 {
+    color: white;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    padding-bottom: 15px;
+}
 @media screen and (max-width: 1060px) {
 
     .drag-title {
