--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,216 +1,278 @@
 @font-face {
-    font-family: NovaFlat;
-    src: url('fonts/NovaFlat-Regular.ttf');
+  font-family: NovaFlat;
+  src: url("fonts/NovaFlat-Regular.ttf");
 }
 
 label {
-    font-family: NovaFlat, arial, serif;
-    ;
+  font-family: NovaFlat, arial, serif;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 .navbar {
-    background-color: #712F26;
+  background-color: #712f26;
 }
 
 .drag-section-external {
-    background-color: #D9D9D9;
-    width: 500px;
-    height: 300px;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 12px;
+  background-color: #d9d9d9;
+  width: 500px;
+  height: 300px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 12px;
 }
 
 .drag-section-internal {
-    background-color: #712F26;
-    width: 450px;
-    height: 270px;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 12px;
+  background-color: #712f26;
+  width: 450px;
+  height: 270px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 12px;
 }
 
 .drag-drop {
-    background-color: #D9D9D9;
-    width: 400px;
-    height: 240px;
-    border: none;
-    border-radius: 12px;
+  background-color: #d9d9d9;
+  width: 400px;
+  height: 240px;
+  border: none;
+  border-radius: 12px;
 }
 
 .drag-title {
-    font-size: 32px;
-    font-weight: bold;
-    color: white;
+  font-size: 32px;
+  font-weight: bold;
+  color: white;
 }
 
 .container-drag {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .container-section {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    margin-top: 8%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 8%;
 }
 
 .drag-text {
-    background-image: url("../Assets/Icons/dragAndDropBackground.svg");
-    background-size: 200px 180px;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    width: 100%;
-    height: 180px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
+  background-image: url("../Assets/Icons/dragAndDropBackground.svg");
+  background-size: 200px 180px;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  width: 100%;
+  height: 180px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
 }
 
 .drag-text label {
-    font-size: 24px;
-    text-align: center;
-    font-weight: bold;
-
+  font-size: 24px;
+  text-align: center;
+  font-weight: bold;
 }
 
 #img-arquivo {
-    font-size: 20px;
-    color: white;
-    margin: 5px;
+  font-size: 20px;
+  color: white;
+  margin: 5px;
 }
 #botao {
-    text-align: center
+  text-align: center;
 }
 .botao {
-    text-align: center
+  text-align: center;
 }
 
 .botaoEnviar {
-    width: 20%;
+  width: 20%;
 }
 
 #botaoDownload {
-    width: 30%;
-    font-size: 24px;
-    margin-bottom: 10px;
+  width: 30%;
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
 .botaoVoltar {
-    width: 20%;
+  width: 20%;
 }
 
 .modal {
-    text-align: center;
-    padding: 0 !important;
+  text-align: center;
+  padding: 0 !important;
 }
 
 .modal:before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-    margin-right: -4px;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
 }
 
 .modal-dialog {
-    display: inline-block;
-    text-align: left;
-    vertical-align: middle;
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
 }
 
 .modal-body {
-    font-size: 24px;
-    background-color: transparent;
-    background-image: initial;
-    background-repeat: initial;
-    background-attachment: initial;
-    background-position: initial;
+  font-size: 24px;
+  background-color: transparent;
+  background-image: initial;
+  background-repeat: initial;
+  background-attachment: initial;
+  background-position: initial;
 }
 
 #modal-alert {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .upload-button {
-    background-color: #5A261E;
-    border: none;
-    border-radius: 22px;
-    cursor: pointer;
+  background-color: #5a261e;
+  border: none;
+  border-radius: 22px;
+  cursor: pointer;
 }
 
 .upload-button label {
-    padding: 4px 12px;
-    color: #D8D8D8;
-    font-size: 14px;
-    font-weight: normal;
-    margin: 4px;
-    cursor: pointer;
+  padding: 4px 12px;
+  color: #d8d8d8;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 4px;
+  cursor: pointer;
 }
 
 .label-icon-upload {
-    color: #D8D8D8;
-    font-size: 32px;
-    font-weight: normal;
+  color: #d8d8d8;
+  font-size: 32px;
+  font-weight: normal;
 }
 
 .imgIntIconContainer,
 .imgExtIconContainer {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
 }
 
 h6 {
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 15px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 15px;
 }
 
+/* Stylos do novo componente: Tela de erro */
+#error-modal-container {
+  position: fixed;
+  top: 68px;
+  left: 0;
+  z-index: 100;
+
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+
+  background-color: rgba(247, 212, 212, 0.9);
+}
+
+#error-modal-container .error-text-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+#error-modal-container .error-icon {
+  weight: 50px;
+  width: 50px;
+}
+
+#error-modal-container .error-text {
+  width: 514px;
+  height: 39px;
+
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 39px;
+
+  color: #ae1e1e;
+}
+
+#error-modal-container .error-button {
+  width: 300px;
+  height: 60px;
+  background: #d92626;
+  border: none;
+  border-radius: 30px;
+
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #fafafa;
+}
+
+#error-modal-container .error-button:hover {
+  background: #d92626dd;
+}
+
+/* Fim dos estilos tylos do novo componente */
+
 @media screen and (max-width: 1060px) {
+  .drag-title {
+    font-size: 16px;
+  }
 
-    .drag-title {
-        font-size: 16px;
-    }
+  .container-section {
+    flex-direction: column;
+    gap: 24px;
+  }
 
-    .container-section {
-        flex-direction: column;
-        gap: 24px;
-    }
+  .drag-section-external {
+    width: 200px;
+    height: 100px;
+  }
 
-    .drag-section-external {
-        width: 200px;
-        height: 100px;
-    }
+  .drag-section-internal {
+    width: 150px;
+    height: 80px;
+  }
 
-    .drag-section-internal {
-        width: 150px;
-        height: 80px;
-    }
-
-    .drag-drop {
-        width: 100px;
-        height: 60px;
-    }
+  .drag-drop {
+    width: 100px;
+    height: 60px;
+  }
 }
