--- a/stylesheets/Index.css
+++ b/stylesheets/Index.css
@@ -3,7 +3,7 @@
 @import url('./UploadSection.css');
 @import url('./About.css');
 @import url('./Team.css');
-
+@import url('./Footer.css');
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap'); Font Quicksand */
@@ -82,7 +82,7 @@ button {
     width: 300px;
     height: 60px;
     border-radius: 30px;
-
+    cursor: pointer;
 
     background: var(--p-200);
     border: none;
@@ -94,6 +94,31 @@ button {
     line-height: 24px;
 }
 
-.pdi-button {
-    background: var(--p-200);
+button:hover{
+    background: var(--p-300);
 }
+.label-button{
+    padding: 15px;
+    text-align: center;
+    justify-content: center;
+    width: 300px;
+    height: 60px;
+    border-radius: 30px;
+    cursor: pointer;
+
+    background: var(--p-200);
+    border: none;
+
+    color: var(--b-000);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.label-button:hover{
+    background: var(--p-300);
+}
+
+
+
