--- a/stylesheets/Footer.css
+++ b/stylesheets/Footer.css
@@ -50,3 +50,8 @@ footer img:hover {
     justify-content: space-around;
     font-weight: 300;
 }
+@media (max-width:766px) {
+    .logo strong,.logo div {
+        display: none;
+    }
+}
