--- a/stylesheets/Index.css
+++ b/stylesheets/Index.css
@@ -120,5 +120,30 @@ button:hover{
     background: var(--p-300);
 }
 
+.list-module{
+    height: 100%;
+    width: 100%;
+    background-color: var(--b-000);
+    font-family: 'Montserrat', sans-serif;
+}
 
+.list-section{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+}
+
+.list-space{
+    width: 100%;
+    padding: 25px;
+}
+
+.list-title{
+    font-weight: 300;
+    color: #821717;
+    margin-bottom: 16px;
+}
 
