--- a/static/stylesheets/Index.css
+++ b/static/stylesheets/Index.css
@@ -1,3 +1,6 @@
+html{
+    height: 100vh;
+}
 .modelHolder{
     display: flex;
     flex-direction: column;
@@ -8,6 +11,24 @@
     width: 100%;
 }
 
+.mainCheckbox{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: baseline;
+    gap: 12px;
+}
+.downloadScreen{
+    display: flex;
+    background-color: rgb(250, 250, 250);
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.mainCheckbox label{
+    font-size: 18px;
+}
 .IndexButtonsSend{
     display: flex;
     align-items: center;
@@ -21,3 +42,9 @@
 html {
     scroll-behavior: smooth;
   }
+.container-section .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
