paginação na tela de relatorio

--- a/views/seeds.html
+++ b/views/seeds.html
@@ -14,6 +14,7 @@
     <title>TetraSeed - Ferramenta de Classificação de sementes</title>
     <link rel="icon" type="image/x-icon" href="./static/Assets/Logo/logo.png">
     <link href="./static/stylesheets/seedsInfos.css" rel="stylesheet">
+    <link href="./static/stylesheets/componentsSeeds.css" rel="stylesheet">
     <link href="./static/stylesheets/Header.css" rel="stylesheet">
     <link href="./static/stylesheets/Footer.css" rel="stylesheet">
 
