--- a/views/seeds.html
+++ b/views/seeds.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body style="background-color: #FAFAFA">
+<body class="downloadScreen"  style="background-color: #FAFAFA">
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light logo">
             <a href="/" class="navbar-brand">
