--- a/views/index.html
+++ b/views/index.html
@@ -120,7 +120,7 @@
             <div class="modelHolder img-titles">
                 <h3>Selecione o modelo a ser utilizado</h3>
                 <select name="model">
-                    {% for model in models.result %}
+                    {% for model in models %}
                     <option value={{model.id}}> {{model.name}}</option>
                     {% endfor %}
                 </select>
