--- a/views/index.html
+++ b/views/index.html
@@ -19,10 +19,28 @@
     <link href="./static/stylesheets/About.css" rel="stylesheet">
     <link href="./static/stylesheets/Team.css" rel="stylesheet">
     <link href="./static/stylesheets/Footer.css" rel="stylesheet">
+    <link href="./static/stylesheets/teste.css" rel="stylesheet">
 
 </head>
 
 <body style="background-color: #FAFAFA">
+    
+    <section id="animation">
+        <div class="animationHolder">
+            <div class="main-text-animation">
+                <h1>TetraSeed</h1>
+            </div>
+            <div class="secondary-text-animation">
+                <h2>Sua Ferramenta para classificar sementes</h2>
+            </div>
+            <div class="button-text-animation">
+                <div id="botao" class="mt-5 defaultButton">
+                    <button type="button" class="btn btn-danger btn-lg white" onclick="displayApplication()">Iniciar</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light logo">
             <a href="/" class="navbar-brand">
@@ -289,16 +307,19 @@
                         <p>Luan Ícaro (Líder)</p>
                     </li>
                     <li>
+                        <p>Cezario Luiz</p>
+                    </li>
+                    <li>
                         <p>Ailson Alexandre</p>
                     </li>
                     <li>
-                        <p>Neander Danúbioo</p>
+                        <p>Neander Danúbio</p>
                     </li>
                     <li>
                         <p>Tácio Soares</p>
                     </li>
                     <li>
-                        <p>Mateus Melo </p>
+                        <p>Mateus Melo</p>
                     </li>
                     <li>
                         <p>Renan Martins</p>
@@ -310,10 +331,10 @@
                 <ul>
                     <h3 class="list-title">Testes:</h3>
                     <li>
-                        <p>Helano Fontenele (Líder)</p>
+                        <p>Nicolas de Carvalho (Líder)</p>
                     </li>
                     <li>
-                        <p>Nicolas de Carvalho</p>
+                        <p>Helano Fontenele</p>
                     </li>
                     <li>
                         <p>Vitor Gabriel</p>
@@ -322,7 +343,7 @@
                         <p>Athur Pinto</p>
                     </li>
                     <li>
-                        <p>Lucas SIlva</p>
+                        <p>Lucas Silva</p>
                     </li>
                     <li>
                         <p>Ismael José</p>
